--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "graphql-ws",
   "version": "5.12.0",
-  "description": "Coherent, zero-dependency, lazy, simple, GraphQL over WebSocket Protocol compliant server and client",
+  "description": "Coherent, zero-dependency, lazy, simple, based on graphql websocket protocol, compliant server and client",
   "keywords": [
     "protocol",
-    "graphql",
     "transport",
     "subscriptions",
     "websockets",
@@ -89,9 +88,6 @@
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
     "release": "semantic-release"
   },
-  "peerDependencies": {
-    "graphql": ">=0.11 <=16"
-  },
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
@@ -117,7 +113,6 @@
     "fastify": "^4.14.0",
     "fastify-websocket": "4.2.2",
     "glob": "^9.2.1",
-    "graphql": "^16.6.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "jest-jasmine2": "^29.4.3",
