--- a/package.json
+++ b/package.json
@@ -85,8 +85,7 @@
     "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
     "build:cjs": "tsc -b tsconfig.cjs.json",
     "build:umd": "rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript && gzip umd/graphql-ws.min.js -c > umd/graphql-ws.min.js.gz",
-    "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
-    "release": "semantic-release"
+    "build": "yarn build:esm && yarn build:cjs && yarn build:umd"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -99,8 +98,6 @@
     "@fastify/websocket": "^7.1.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@semantic-release/changelog": "^6.0.2",
-    "@semantic-release/git": "^10.0.1",
     "@types/eslint": "^8.21.1",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.4.0",
@@ -119,7 +116,6 @@
     "prettier": "^2.8.4",
     "replacestream": "^4.0.3",
     "rollup": "^3.18.0",
-    "semantic-release": "^20.1.1",
     "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.5.0",
     "typedoc": "^0.23.26",
