--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,19 +1,27 @@
 name: Build and release
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
 
-permissions:
-  contents: write
-  pull-requests: write
-  issues: write
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
-jobs:
-  build:
-    name: Build
+jobs:   
+  release:
+    name: Release
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: write
+      packages: write
+      pull-requests: write
+      issues: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       - name: Set up node
         uses: actions/setup-node@v3
         with:
@@ -21,40 +29,15 @@ jobs:
           cache: yarn
       - name: Install
         run: yarn install --immutable
-      - name: Build
-        run: yarn build
-      - name: Upload build
-        uses: actions/upload-artifact@v3
+      - name: Download build
+        uses: actions/download-artifact@v3
         with:
           name: build
-          path: |
-            lib
-            umd
-
-  # release:
-  #   name: Release
-  #   runs-on: ubuntu-latest
-  #   needs: [build, changelog]
-  #   environment: npm
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         fetch-depth: 0 # necessary for correct CHANGELOGS
-  #     - name: Set up node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: 18
-  #         cache: yarn
-  #     - name: Install
-  #       run: yarn install --immutable
-  #     - name: Download build
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: build
-  #     - name: Release
-  #       env:
-  #         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-  #       run: yarn release
+      - name: Create PR or Release
+        uses: changesets/action@v1
+        with:
+          publish: yarn ci:publish
+          createGithubReleases: true # only works after publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
