--- a/package.json
+++ b/package.json
@@ -85,7 +85,8 @@
     "build:esm": "tsc -b tsconfig.esm.json && node scripts/esm-post-process.mjs",
     "build:cjs": "tsc -b tsconfig.cjs.json",
     "build:umd": "rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript && gzip umd/graphql-ws.min.js -c > umd/graphql-ws.min.js.gz",
-    "build": "yarn build:esm && yarn build:cjs && yarn build:umd"
+    "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
+    "ci:publish": "yarn build && changeset publish"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -95,6 +96,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
+    "@changesets/cli": "^2.26.0",
     "@fastify/websocket": "^7.1.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
