--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,70 +1,27 @@
 name: Build and release
 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - master
 
-permissions:
-  contents: write
-  pull-requests: write
-  issues: write
+concurrency: ${{ github.workflow }}-${{ github.ref }}
 
-jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Build
-        run: yarn build
-      - name: Upload build
-        uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: |
-            lib
-            umd
-
-  changelog:
-    name: Changelog
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # necessary for correct changelog
-      - name: Set up node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: yarn
-      - name: Install
-        run: yarn install --immutable
-      - name: Changelog
-        run: |
-          yarn semantic-release \
-            -p @semantic-release/release-notes-generator \
-            --dry-run \
-            | tee changelog.out
-          sed -n '/#/,$p' changelog.out >> $GITHUB_STEP_SUMMARY
-
+jobs:   
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [build, changelog]
-    environment: npm
+    permissions:
+      id-token: write
+      contents: write
+      packages: write
+      pull-requests: write
+      issues: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          fetch-depth: 0 # necessary for correct CHANGELOGS
+          fetch-depth: 0
       - name: Set up node
         uses: actions/setup-node@v3
         with:
@@ -72,12 +29,11 @@ jobs:
           cache: yarn
       - name: Install
         run: yarn install --immutable
-      - name: Download build
-        uses: actions/download-artifact@v3
+      - name: Create PR or Release
+        uses: changesets/action@v1
         with:
-          name: build
-      - name: Release
+          publish: yarn ci:publish
+          createGithubReleases: true # only works after publish
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn release
