--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "build:cjs": "tsc -b tsconfig.cjs.json",
     "build:umd": "rollup --bundleConfigAsCjs --config rollup.config.ts --configPlugin typescript && gzip umd/graphql-ws.min.js -c > umd/graphql-ws.min.js.gz",
     "build": "yarn build:esm && yarn build:cjs && yarn build:umd",
-    "release": "semantic-release"
+    "ci:publish": "yarn build && changeset publish"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -96,11 +96,10 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
+    "@changesets/cli": "^2.26.0",
     "@fastify/websocket": "^7.1.2",
     "@rollup/plugin-terser": "^0.4.0",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@semantic-release/changelog": "^6.0.2",
-    "@semantic-release/git": "^10.0.1",
     "@types/eslint": "^8.21.1",
     "@types/glob": "^8.1.0",
     "@types/jest": "^29.4.0",
@@ -119,7 +118,6 @@
     "prettier": "^2.8.4",
     "replacestream": "^4.0.3",
     "rollup": "^3.18.0",
-    "semantic-release": "^20.1.1",
     "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.5.0",
     "typedoc": "^0.23.26",
