--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "fastify": "^4.14.0",
     "fastify-websocket": "4.2.2",
     "glob": "^9.2.1",
+    "graphql": "^16.6.0",
     "jest": "^29.4.3",
     "jest-environment-jsdom": "^29.4.3",
     "jest-jasmine2": "^29.4.3",
